--- a/Documentation.csproj
+++ b/Documentation.csproj
@@ -5,11 +5,23 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\src\**" />
+    <Content Remove="wwwroot\src\**" />
+    <EmbeddedResource Remove="wwwroot\src\**" />
+    <None Remove="wwwroot\src\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\DocumentationModels\DocumentationModels.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Client\" />
+    <Folder Include="wwwroot\application\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="wwwroot\index.html" />
   </ItemGroup>
 
 </Project>
