--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -2,6 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <AssemblyName>Models</AssemblyName>
+    <RootNamespace>Models</RootNamespace>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\Onno\source\repos\BaseWebApplication\Models\DocumentationModels.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
