--- a/Server/BaseWebApplication.csproj
+++ b/Server/BaseWebApplication.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\Onno\source\repos\BaseWebApplication\Server\BaseWebApplication.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <Compile Remove="Client\**" />
     <Compile Remove="wwwroot\src\**" />
@@ -32,10 +36,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Models\DocumentationModels.csproj" />
   </ItemGroup>
 
 </Project>
