--- a/Server/wwwroot/package.json
+++ b/Server/wwwroot/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "npx tsc"
+    "build": "npx tsc",
+    "build-watch": "npx tsc --watch"
   },
   "keywords": [],
   "author": "",
