--- a/Server/wwwroot/package.json
+++ b/Server/wwwroot/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "npx tsc",
-    "build-watch": "npx tsc --watch"
+    "build-watch": "npx tsc --watch",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +14,14 @@
   "devDependencies": {
     "@types/react": "17.0.14",
     "@types/react-dom": "17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.28.2",
+    "@typescript-eslint/parser": "^4.28.2",
+    "eslint": "^7.30.0",
     "typescript": "4.3.5"
   },
   "dependencies": {
     "@types/requirejs": "2.1.33",
+    "eslint-plugin-header": "^3.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "requirejs": "2.3.6"
