--- a/Server/wwwroot/package.json
+++ b/Server/wwwroot/package.json
@@ -11,19 +11,19 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@types/react": "17.0.14",
     "@types/react-dom": "17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.28.2",
-    "@typescript-eslint/parser": "^4.28.2",
-    "eslint": "^7.30.0",
-    "openapi-typescript-codegen": "^0.9.3",
-    "typescript": "4.3.5"
+    "@types/requirejs": "2.1.33",
+    "@typescript-eslint/eslint-plugin": "4.28.2",
+    "@typescript-eslint/parser": "4.28.2",
+    "eslint-plugin-header": "3.1.1",
+    "eslint": "7.30.0",
+    "typescript": "4.3.5",
+    "openapi-typescript-codegen": "0.9.3"
   },
   "dependencies": {
-    "@types/requirejs": "2.1.33",
-    "eslint-plugin-header": "^3.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "requirejs": "2.3.6"
