--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <AdditionalFiles Include="../stylecop.json" />
+    <AdditionalFiles Include="../settings.stylecop" />
   </ItemGroup>
 
   <ItemGroup>
