--- a/ServicesProvider/ServicesProvider.csproj
+++ b/ServicesProvider/ServicesProvider.csproj
@@ -1,36 +1,29 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <TypeScriptToolsVersion>4.2</TypeScriptToolsVersion>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <DocumentationFile>C:\Users\Onno\source\repos\BaseWebApplication\Server\BaseWebApplication.xml</DocumentationFile>
+    <DocumentationFile>C:\Reps\BaseWebApplication\ServicesProvider\ServicesProvider.xml</DocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Remove="wwwroot\**" />
-  </ItemGroup>
-
-  <ItemGroup>
     <AdditionalFiles Include="../stylecop.json" />
-    <AdditionalFiles Include="../settings.stylecop" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="StrongInject" Version="1.2.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.1.118">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
     <ProjectReference Include="..\Models\Models.csproj" />
-    <ProjectReference Include="..\ServicesProvider\ServicesProvider.csproj" />
   </ItemGroup>
 
 </Project>
